tests/errors/syntax_errors/nargs.py
# pylint: disable=missing-function-docstring, missing-module-docstring/

def f(*args):
    pass
